dev/setup/1argocd/resources/ingress-http.yaml
#https://argoproj.github.io/argo-cd/operator-manual/ingress/
#This file contains ingress definition for http and https protocols
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port: 
              name: http
    host: argocdhostname.gmetri.com
  tls:
  - hosts:
    - argocdhostname.gmetri.com
    secretName: tls-argocdhostname-gmetri-com
